--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ nav {
   height: 10vh;
   padding: 1rem 2.4rem;
 }
+nav > a {
+  display: none;
+}
+nav > svg {
+  max-width: 15%;
+}
 .location {
   width: 10%;
 }
@@ -31,7 +37,7 @@ nav {
   width: 35%;
 }
 .search > input {
-  padding: 0.7rem 2rem;
+  padding: 0.7rem 0 0.7rem 2rem;
   width: 100%;
   background-color: rgb(250, 250, 250);
   border: 1px solid rgb(237, 236, 236);
@@ -43,7 +49,7 @@ nav {
   left: 0.5rem;
 }
 .login {
-  width: 12%;
+  max-width: 12%;
   text-align: center;
 }
 .login > a {
@@ -56,6 +62,7 @@ nav {
 }
 .button > button {
   display: flex;
+  justify-content: center;
   align-items: center;
   padding: 0.6rem 0.3rem;
   width: 100%;
@@ -143,3 +150,20 @@ footer {
   text-align: center;
 }
 /*    footer end    */
+/*     responsiveness   */
+
+@media screen and (max-width: 1020px) {
+  .button,
+  .search,
+  .login,
+  nav > svg {
+    display: none;
+  }
+  nav > a {
+    display: block;
+    font-size: 2em;
+  }
+  .location {
+    width: fit-content;
+  }
+}
