--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ main {
 .dairy-flexbox > .item {
   border: 1px solid rgb(224, 224, 224);
   border-radius: 0.3rem;
-  width: 20vw;
+  width: 20%;
   padding: 0.5rem;
 }
 .dairy-flexbox img {
@@ -154,10 +154,16 @@ footer {
 
 @media screen and (max-width: 1020px) {
   .button,
-  .search,
   .login,
   nav > svg {
     display: none;
+  }
+  nav {
+    flex-wrap: wrap;
+  }
+  .search {
+    order: 2;
+    width: 100%;
   }
   nav > a {
     display: block;
