--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 10vh;
+  min-height: 10vh;
   padding: 1rem 2.4rem;
 }
 nav > a {
@@ -162,6 +162,7 @@ footer {
     flex-wrap: wrap;
   }
   .search {
+    margin-top: 1rem;
     order: 2;
     width: 100%;
   }
